# NvidiaCuda

./: .gitignore  Exercises.md  Readme.md  analysis.md  commands.txt
examples/09-vector-add-prefetch/: vector-add-prefetch.cu
examples/1-gpu-hello-world/: hello-world-gpu.cu
examples/10-init-kernel/: init-kernel-gpu.cu
examples/11-stream-intro/: print-numbers-async.cu  print-numbers-sync.cu
examples/12-stream-init/: no-stream-init.cu  stream-init.cu  stream-sliced.cu
examples/13-vector-add-sm-blocks/: vector-add-SM-blocks.cu
examples/14-unified-memory-page-faults/: page-faults.cu
examples/15-unified-memory-prefetch/: vector-add-prefetch.cu
examples/2-cuda-kernel-idx/: thread-and-block-idx.cu
examples/3-loops/: multiple-block-loop-gpu.cu  single-block-loop-gpu.cu
examples/4-allocation/: block-config.cu  double-elements-gpu.cu
examples/5-grid-stride/: grid-stride-double.cu
examples/6-errors/: error-handling.cu
examples/7-vector/: vector-add-cpu.cu  vector-add-gpu.cu
examples/8-matrix-multiply/: matrix-multiply-2d-cpu.cu  matrix-multiply-2d-gpu.cu
nvidiacuda/: README.md  transpose_part1.cu  transpose_part1.exp  transpose_part1.lib  transpose_part2.cu  transpose_part2.exp  transpose_part2.lib
nvidiacuda2/: README.md  conv_part1.cu  conv_part1.exp  conv_part1.lib  conv_part2.cu  conv_part2.exp  conv_part2.lib
templates/: convolution_filter.cu
templates/cuda-webcam-filter/: CMakeLists.txt  README.md
templates/cuda-webcam-filter/src/: main.cpp
templates/cuda-webcam-filter/src/input_args_parser/: input_args_parser.cpp  input_args_parser.h
templates/cuda-webcam-filter/src/kernels/: convolution_kernels.cu  hdr_tonemapping_kernels.cu  kernels.h
templates/cuda-webcam-filter/src/utils/: filter_utils.cpp  filter_utils.h  pipeline.cpp  pipeline.h  webcam_handler.cpp  webcam_handler.h
